--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,28 @@
-body {
-    font-family: sans-serif;
-}
+h1{text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;}
+    h3{
+        text-align: center;
+        
+    }
+    a{color: brown;}
 
-html, fullscreen {
-    display: flex;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.container {
-    margin: auto
-}
-
-title {
-    font-size: 3rem;
-}
-
-
-
-table {
-    text-align: center;
-    border-spacing: 2px;
-  }
-  table,
-  th,
-  td {
-    padding: 5px;
-    border: 2px solid #000000;
-    background-color: rgb(218, 218, 218);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
-  }
-  td:hover {background-color: rgb(245, 170, 170);}
-  
-  th {  
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: #ffffff;
-    color: rgb(4, 4, 4);
-  }
+    table {
+        text-align: center;
+        border-spacing: 2px;
+      }
+      table,
+      th,
+      td {
+        padding: 5px;
+        border: 2px solid #000000;
+        background-color: rgb(218, 218, 218);
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+      }
+      td:hover {background-color: rgb(245, 170, 170);}
+      
+      th {  
+          font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        background-color: #ffffff;
+        color: rgb(4, 4, 4);
+      }
