--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,83 @@
-h1{text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;}
-    h3{
-        text-align: center;
-        
-    }
-    a{color: brown;}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
-    table {
-        text-align: center;
-        border-spacing: 2px;
-      }
-      table,
-      th,
-      td {
-        padding: 5px;
-        border: 2px solid #000000;
-        background-color: rgb(218, 218, 218);
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
-      }
-      td:hover {background-color: rgb(245, 170, 170);}
-      
-      th {  
-          font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        background-color: #ffffff;
-        color: rgb(4, 4, 4);
-      }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: auto;
+  min-height: 100vh;
+  padding: 20px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 10px;
+  overflow: auto;
+}
+
+.title {
+  margin-bottom: 30px;
+  font-size: 2em;
+}
+
+h3 {
+  margin: 15px 0;
+  width: 100%;
+  text-align: center;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border-radius: 10em;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 1em 2em;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid black;
+  box-shadow: 0 0 0 0 black;
+  width: 80%;
+  margin-top: 20px;
+}
+
+button:hover {
+  transform: translateY(-4px) translateX(-2px);
+  box-shadow: 2px 5px 0 0 black;
+}
+
+button:active {
+  transform: translateY(2px) translateX(1px);
+  box-shadow: 0 0 0 0 black;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}
+
+table {
+  margin: auto;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+table,
+th,
+td {
+  padding: 5px;
+  border: 1px solid #000000;
+  background-color: rgb(218, 218, 218);
+}
+
+td:hover {
+  background-color: rgb(245, 170, 170);
+}
+
+th {
+  background-color: #ffffff;
+  color: rgb(4, 4, 4);
+}
